--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "quotes": [1, "single", { "avoidEscape": true }],
+    "indent": ["error", 2],
+    "semi": [2, "never"]
+  }
 }
