--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "glider-js": "^1.7.7",
     "next": "12.2.4",
     "react": "18.2.0",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "prisma": "^4.2.1",
     "sass": "^1.54.3"
   }
 }
