--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.2.1",
+    "cookie": "^0.5.0",
+    "dotenv": "^16.0.1",
     "glider-js": "^1.7.7",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
