--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^0.5.0",
     "dotenv": "^16.0.1",
     "glider-js": "^1.7.7",
+    "jose": "^4.8.3",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.4",
     "react": "18.2.0",
